<resources>
    <string name="app_name">VBeeOn</string>
    <string name="api_base_url">http://61.28.229.47:9800</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_monitoring">Giám sát</string>
    <string name="menu_online">Trực tuyến</string>
    <string name="menu_control">Điều khiển</string>
    <string name="menu_chuyendoiso">Chuyển đổi số</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_v_bee">MainActivityVBee</string>

    <string name="item_base_convert_digital">CƠ BẢN CHUYỂN ĐỔI SỐ</string>
    <string name="item_smart_convert_digital">VBEEON - SỐ HÓA CHO CUỘC SÔNG THÔNG MINH</string>
    <string name="item_mission_convert_digital">SỨ MỆNH CỦA VBEEON</string>

    <string name="tab_base_c_digital">Cơ bản</string>
    <string name="tab_citizen_c_digital">Cho người dân</string>
    <string name="tab_enterprise_c_digital">Cho doanh nghiệp</string>
    <string name="tab_government_c_digital">Cho cơ quan nhà nước</string>

    <string name="txt_source_web">Nội dung gốc: <u>https:dx.mic.gov.vn/</u></string>

    <string name="message_permission">Hãy cấp quyền truy cập để các chức năng của ứng dụng có thể hoạt động bình thường.</string>
    <string name="title_permission">Quyền truy cập</string>
    <string name="message_error_permission">Một số quyền chưa được cấp. Hãy vào cài đặt và cấp quyền để ứng dụng có thể hoạt động bình thường.</string>
    <string name="exit">Thoát</string>
    <string name="txt_vbeeon_mission">VBEEON ĐƯỢC XÂY DỰNG BỞI MỘT NHÓM CÁC CÔNG TY CÔNG NGHỆ CAO CỦA VIỆT NAM, CHÚNG TÔI NGHIÊN CỨU VÀ SỬ DỤNG CÁC CÔNG NGHỆ HIỆN ĐẠI NHẤT KẾT NỘI MỌI VẬT LÊN INTERNET ĐỂ DUNG CẤP DỊCH VỤ SỐ VÀO MỌI NGÕ NGÁCH CỦA CUỘC SỐNG VỚI ƯỚC VỌNG MỘT VIỆT NAM SỐ HÓA</string>

    <string name="txt_website"><u>www.vbeeon.com</u></string>
    <string name="txt_user">Người dùng</string>
    <string name="txt_guild">Hướng dẫn</string>
    <string name="txt_send_data">Gửi dữ liệu</string>
    <string name="txt_history">Lịch sử</string>

    <string name="device_name_sphyg">MÁY ĐO HUYẾT ÁP</string>
    <string name="device_name_obd">OBD</string>
    <string name="category_name_sphyg">Thiết bị đo</string>
    <string name="category_name_obd">Thiết bị trong xe hơi</string>
    <string name="tv_buy_device">Mua thiết bị tại <u>www.vbeeon.com</u></string>
    <string name="tv_device_detail"><u>Xem chi tiết</u></string>
    <string name="tv_search_device"><u>Tìm kiếm thiết bị</u></string>
    <string name="btn_register">Đăng ký</string>
    <string name="btn_start_introduce">Bắt đầu</string>
    <string name="btn_continue">Bắt đầu</string>

    <string name="tab_sphy_data_saved"><u>Dữ liệu dã lưu</u></string>
    <string name="tab_sphy_data_live"><u>Dữ liệu máy đo</u></string>

    <string name="txt_scan_device">Quét thiết bị</string>
    <string name="txt_save_data">Lưu dữ liệu</string>
    <string name="txt_save_all">Lưu tất cả</string>
    <string name="txt_delete_data">Xóa dữ liệu</string>
    <string name="txt_uong_thuoc"><u>Uống thuốc</u></string>
    <string name="txt_blood_pressure_readings"><u>Chỉ số huyết áp</u></string>
    <string name="lbl_input_name">Nhập vào tên</string>
    <string name="hide_input_name">Tên người dùng</string>
    <string name="emtry_input_name">Nhập vào tên của bạn</string>
    <string name="emtry_input_birthday">Nhập vào ngày sinh của bạn</string>
    <string name="input_birthday_error">Ngày sinh không hợp lệ</string>
    <string name="hide_birthday">Ngày sinh</string>
    <string name="lable_sex">Giới tính</string>
    <string name="register_success">Đăng ký tài khoản thành công</string>
    <string name="hint_user">Tên đăng nhập *</string>
    <string name="hint_email">Email *</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_pass">Mật khẩu</string>
    <string name="txt_emtry_user_register">Chưa có tài khoản ? ĐĂNG KÝ</string>
    <string name="txt_value_user_login">Đã có tài khoản ? ĐĂNG NHẬP</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="title_register">ĐĂNG KÝ</string>
    <string name="btn_register_done">Quay lại Đăng nhập</string>
    <string name="message_register_done">Hệ thống vừa gửi đường dẫn kích hoạt tài khoản tới email của bạn. Nhấn vào link để xác nhận</string>
    <string name="message_forgot_pass">Hệ thống sẽ tự động gửi tới email của bạn, Xin hãy mở email và làm theo hướng dẫn</string>


</resources>