<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgMain"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/toolbar_main"/>
    <ImageView

        app:layout_constraintDimensionRatio="1:0.653"
        android:scaleType="fitXY"
        android:src="@drawable/landmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <EditText
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hide_input_name"
        android:paddingLeft="@dimen/dimen_50dp"
        android:id="@+id/edtFullName"
        android:backgroundTint="@color/textAppBar"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@+id/appBarMain"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorHint="@color/grey_80"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <ImageView

        android:src="@drawable/ic_user"
        android:padding="@dimen/dimen_15dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/edtFullName"
        app:layout_constraintTop_toTopOf="@+id/edtFullName"
        app:layout_constraintBottom_toBottomOf="@+id/edtFullName"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <EditText
        android:focusable="false"
        android:clickable="false"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textCursorDrawable="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hide_birthday"
        android:paddingLeft="@dimen/dimen_50dp"
        android:id="@+id/edtBirthday"
        android:backgroundTint="@color/textAppBar"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@+id/edtFullName"
        android:textColorHint="@color/grey_80"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <ImageView

        android:src="@drawable/ic_calendar"
        android:padding="@dimen/dimen_15dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/edtBirthday"
        app:layout_constraintTop_toTopOf="@+id/edtBirthday"
        app:layout_constraintBottom_toBottomOf="@+id/edtBirthday"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        style="@style/TextMainItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@+id/edtBirthday"
        app:layout_constraintEnd_toEndOf="@+id/edtBirthday"
        android:checkedButton="@+id/offer"
        android:id="@+id/toggle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/pink_out_line"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:id="@+id/male"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="Nam"
            android:textColor="@color/black" />

        <RadioButton
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/famale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="Nữ"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvScanDevice"
        style="@style/TextSp16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:text="@string/lable_sex"
        app:layout_constraintTop_toTopOf="@+id/toggle"
        app:layout_constraintBottom_toBottomOf="@+id/toggle"
        app:layout_constraintStart_toStartOf="@id/edtBirthday" />

    <Button
         app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/dimen_20dp"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15dp"
        android:id="@+id/btnRegister"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:background="@drawable/shape_button_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>